--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1>Brick Breaker</h1>
     <script src="Ball.js"></script>
     <script src="sketch.js"></script>
+    <script src="Paddle.js"></script>
+    <script src="Game.js"></script>
+    <script src="Brick.js"></script>
     
     <main>
     </main>
